--- a/roles/graylog/tasks/main.yml
+++ b/roles/graylog/tasks/main.yml
@@ -125,7 +125,7 @@
   lineinfile:
     path: /etc/graylog/server/server.conf
     regexp: '^elasticsearch_hosts='
-    line: "elasticsearch_hosts=https://admin:{{ wazuh_password }}@{{ manager_ip }}:9200"
+    line: "elasticsearch_hosts=https://graylog:{{ wazuh_graylog_password }}@{{ manager_ip }}:9200"
     state: present
   
 - name: Create graylog certs directory
@@ -140,6 +140,7 @@
   ansible.builtin.copy:
     src: /usr/lib/jvm/java-21-openjdk-amd64/lib/security/cacerts
     dest: /etc/graylog/server/certs/cacerts
+    remote_src: yes
     owner: root
     group: root
     mode: '0644'
