--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -85,41 +85,28 @@
     wazuh_api_password: "{{ wazuh_api_password.stdout }}"
 
 - name: Authenticate and retrieve the token
-  ansible.builtin.uri:
-    url: "https://127.0.0.1:55000/security/user/authenticate"
-    method: POST
-    user: "wazuh"
-    password: "{{ wazuh_api_password }}"
-    body_format: json
-    headers:
-      Content-Type: "application/json"
-    validate_certs: no
-    return_content: yes
+  ansible.builtin.command:
+    cmd: >
+        curl -u wazuh:{{ wazuh_api_password }} -k -X POST "https://127.0.0.1:55000/security/user/authenticate"
   register: auth_response
+  changed_when: false 
 
 - name: Extract the token from the response
   ansible.builtin.set_fact:
-    wazuh_token: "{{ auth_response.json.data.token }}"
+    wazuh_token: "{{ auth_response.stdout | from_json | json_query('data.token') }}"
 
 - name: Debug the token
   ansible.builtin.debug:
     msg: "Wazuh API token: {{ wazuh_token }}"
 
 - name: Send API request to add Graylog user
-  ansible.builtin.uri:
-    url: "https://127.0.0.1:55000/security/users"
-    method: POST
-    headers:
-      Authorization: "Bearer {{ wazuh_token }}"
-      Content-Type: "application/json"
-    body: |
-      {
-        "password": "{{ wazuh_graylog_password }}",
-        "username": "graylog"
-      }
-    body_format: json
-    validate_certs: no
-    return_content: yes
+  ansible.builtin.command:
+    cmd: >
+      curl -X POST https://127.0.0.1:55000/security/users
+      -H "Authorization: Bearer {{ wazuh_token }}"
+      -H "Content-Type: application/json"
+      -d '{"password": "{{ wazuh_graylog_password }}", "username": "graylog"}'
+      -k
   register: create_user_response
 
 - name: Debug the response from user creation
