--- a/roles/agent/defaults/main.yml
+++ b/roles/agent/defaults/main.yml
@@ -75,7 +75,7 @@ wazuh_agent_enrollment:
   manager_address: ''
   port: 1515
   agent_name: ''
-  groups: ''
+  groups: 'linux'
   agent_address: ''
   ssl_ciphers: HIGH:!ADH:!EXP:!MD5:!RC4:!3DES:!CAMELLIA:@STRENGTH
   server_ca_path: ''
