--- a/roles/manager/files/agent_linux.conf
+++ b/roles/manager/files/agent_linux.conf
@@ -93,16 +93,10 @@
     <scan_on_start>yes</scan_on_start>
 
     <!-- Directories to check  (perform all possible verifications) -->
-    <directories check_all="yes" whodata="yes" report_changes="yes">/var/ossec/etc/ossec.conf, /var/ossec/etc/rules</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes">/var/ossec/etc/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/bin, /usr/sbin, /home/, /bin, /sbin</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/boot/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_login</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bashrc</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_logout</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/tmp/, /var/www/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/ssh</directories>
